deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anti-ruido-api
spec:
  selector:
    app: anti-ruido-api
  ports:
    - port: 80
      targetPort: 7860
  type: ClusterIP
